# brainfuck

./: .gitignore  CMakeLists.txt  README.md  test
app/: CMakeLists.txt  brainfuck.c
include/brainfuck/: machine.h
lib/: machine.c
src/: CMakeLists.txt  brainfuck.c  machine.c  tape.c
src/lib/include/: tape.h
src/lib/src/: tape.c
tests/: CMakeLists.txt  machine_tests.c  tape_tests.c
